@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/dejavu-2.24.ebuild,v 1.2 2008/03/18 14:00:23 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/dejavu-2.25.ebuild,v 1.1 2008/05/19 12:56:50 pva Exp $
 
 EAPI="prefix"
 
